Adicionando ajustes solicitados pelo orientador - versão final

--- a/editaveis/avaliacaoframework.tex
+++ b/editaveis/avaliacaoframework.tex
@@ -1,4 +1,4 @@
-\chapter{Aplicação do \textit{Framework}}
+\chapter{Resultados da Aplicação do \textit{Framework}}
 
 Neste capítulo são apresentados os resultados de cada \textit{sprint} executada nos projetos selecionados para análise. Neste trabalho, cada \textit{sprint} representa um ciclo de pesquisa-ação e, como etapas de um ciclo, tem-se o planejamento, a ação e a avaliação. O relato da etapa de planejamento detalha tudo o que foi concebido entre a equipe de pesquisa, equipe de TI da instituição e área de negócio do projeto. A etapa ação evidencia como as atividades planejadas na etapa anterior se desenvolveram. Por fim, na etapa de avaliação, os dados coletados são exibidos bem como uma breve análise. Será possível contemplar gráficos comparativos ao final para evidenciar a evolução dos ciclos em cada projeto.
 
@@ -173,6 +173,8 @@ Resposta Service - \textit{Domain.Service} & 64 \\
 \end{tabular}
 \label{table:tabela6}
 \end{table}
+
+\hfill \break
 
 Considerando os parâmetros da \textit{Microsoft}, todas as classes e interfaces apresentaram índices de manutenibilidade aceitáveis. Contudo, deve-se atentar para as classes na camada de serviço, que indicam necessidade de refatorações para que o índice de manutenibilidade possa aumentar.
 
@@ -638,13 +640,33 @@ A partir da execução de dois ciclos de pesquisa-ação foi possível perceber 
 
 No caso do projeto do Portal, após execução do segundo ciclo de pesquisa, foi possível perceber que 100\% dos desenvolvedores passaram a concordar totalmente com o aspecto de que a manutenibilidade do código passou a melhorar após realização de inspeções (questão 5). Adicionalmente, 100\% dos desenvolvedores passaram a concordar totalmente quanto à diminuição do número de falhas percebidas pelos usuários (questão 4).
 
-A figura \ref{fig:evolucaoPortal} exibe dois gráficos comparativos, \textit{sprint} 1 e \textit{sprint} 2, que evidenciam as percepções dos desenvolvedores do Portal quanto ao uso do \textit{framework}.
+A figura \ref{fig:evolucaoPortal} exibe dois gráficos comparativos, \textit{sprint} 1 e \textit{sprint} 2, que evidenciam as percepções dos desenvolvedores do Portal quanto ao uso do \textit{framework}. Apenas para fins de esclarecimento, as figuras exibem gráficos das duas \textit{sprints}, sendo os dados da \textit{sprint} 1 à esquerda e os dados da \textit{sprint} 2 à direita. As barras exibem a quantidade de respostas percebidas para cada questão (Q1, Q2, Q3, Q4 e Q5), bem como a classificação da resposta quanto à escala \textit{Likert}, sendo as abreviações:
+
+\begin{itemize}
+	\item CT - Concordo Totalmente
+	\item CP - Concordo Parcialmente
+	\item N - Neutro
+	\item DP - Discordo Parcialmente
+	\item DT - Discordo Totalmente
+\end{itemize}
 
 \begin{figure}[h]
 \includegraphics[width=\textwidth]{figuras/isd_portal.png}
 \caption{Índice de Satisfação dos Desenvolvedores - Portal da Transparência - Evolução dos Ciclos}
 \label{fig:evolucaoPortal}
 \end{figure}
+
+\hfill \break
+
+\hfill \break
+
+\hfill \break
+
+\hfill \break
+
+\hfill \break
+
+\hfill \break
 
 Com relação ao projeto SICOR, a equipe de desenvolvimento apresentou percepção similar à equipe do portal quanto ao aspecto de que as inspeções se mostraram eficientes na identificação de defeitos no código (questão 1), ou seja, 100\% dos desenvolvedores das duas equipes concordaram totalmente quanto a este aspecto em ambos os ciclos de pesquisa. Adicionalmente, ao final do ciclo 2, 100\% da equipe de desenvolvimento do SICOR passou a concordar totalmente quanto ao aspecto de que os testes unitários implementados de acordo com o guia proposto pelo \textit{framework} exercitam o código de maneira eficiente (questão 2).
 
@@ -656,6 +678,16 @@ A figura \ref{fig:evolucaoSicor} exibe dois gráficos comparativos, \textit{spri
 \label{fig:evolucaoSicor}
 \end{figure}
 
+\hfill \break
+
+\hfill \break
+
+\hfill \break
+
+\hfill \break
+
+\hfill \break
+
 No caso do projeto Sistema de Perícia Médica, foi notória a evolução da percepção da equipe de desenvolvimento quanto à importância das práticas de verificação de \textit{software}. Para exemplificar essa afirmação, 100\% dos desenvolvedores eram neutros, no ciclo 1, quanto à eficácia das inspeções na identificação de defeitos e da utilidade dos testes unitários (questões 1 e 2). No ciclo 2, 100\% dos desenvolvedores passaram a concordar parcialmente quanto a estes aspecto. Contudo, desde o início, 100\% da equipe concordava totalmente quanto a melhoria da manutenibilidade após realização de inspeções (questão 5).
 
 A figura \ref{fig:evolucaoPericia} exibe dois gráficos comparativos, \textit{sprint} 1 e \textit{sprint} 2, que evidenciam as percepções dos desenvolvedores do Sistema de Perícia Médica quanto ao uso do \textit{framework}.
@@ -666,7 +698,15 @@ A figura \ref{fig:evolucaoPericia} exibe dois gráficos comparativos, \textit{sp
 \label{fig:evolucaoPericia}
 \end{figure}
 
-\clearpage
+\hfill \break
+
+\hfill \break
+
+\hfill \break
+
+\hfill \break
+
+\hfill \break
 
 Por fim, tem-se o gráfico geral para o projeto do Sistema de Ouvidoria. Neste caso, infelizmente não ocorreu a execução do segundo ciclo, mas é possível contemplar a receptividade dos desenvolvedores do mesmo quanto ao uso do \textit{framework} em uma iteração de desenvolvimento. A figura \ref{fig:evolucaoOuvdf} exibe o cenário geral.
 
@@ -676,4 +716,6 @@ Por fim, tem-se o gráfico geral para o projeto do Sistema de Ouvidoria. Neste c
 \label{fig:evolucaoOuvdf}
 \end{figure}
 
-Com base em todas as respostas coletadas, é possível perceber que não houve nenhuma resposta do tipo \"discordo totalmente\" ou \"discordo parcialmente\". O \textit{framework}, de maneira geral, teve uma excelente aceitação e mostrou-se eficiente na verificação da qualidade.
+Com base em todas as respostas coletadas, é possível perceber que não houve nenhuma resposta do tipo discordo totalmente ou discordo parcialmente. O \textit{framework}, de maneira geral, teve uma excelente aceitação e mostrou-se eficiente na verificação da qualidade.
+
+\clearpage
