--- a/editaveis/consideracoesfinais.tex
+++ b/editaveis/consideracoesfinais.tex
@@ -2,7 +2,7 @@
 
 Durante a realização deste trabalho, foi possível concluir a aplicação do plano metológico de pesquisa concebido para este estudo. O \textit{framework} concebido durante a primeira parte do plano foi avaliado de acordo com os ciclos de pesquisa-ação executados nas instituições que se dispuseram a participar do estudo.
 
-Os dados obtidos por meio da execução dos ciclos ressaltaram a importância de se estabeleceer uma cultura de verificação de \textit{software} em um processo de desenvolvimento. Em todos os projetos adotados para aplicação dos conceitos propostos pelo \textit{framework}, percebeu-se a redução expressiva do número de falhas contemplado pelo usuário após entregas de \textit{releases}. Além disso, percebeu-se que as inspeções, quando bem feitas, são precisas na identificação de defeitos no código.
+Os dados obtidos por meio da execução dos ciclos ressaltaram a importância de se estabelecer uma cultura de verificação de \textit{software} em um processo de desenvolvimento. Em todos os projetos adotados para aplicação dos conceitos propostos pelo \textit{framework}, percebeu-se a redução expressiva do número de falhas contemplado pelo usuário após entregas de \textit{releases}. Além disso, percebeu-se que as inspeções, quando bem feitas, são precisas na identificação de defeitos no código.
 
 Outro aspecto que foi evidenciado pela execução dos ciclos é que a realização de inspeções e implementação de testes unitários realmente se caracterizam como atividades complementares. No caso do Laboratório Fábrica de \textit{Software}, embora a suíte de testes unitários não tenha sido concluída ao final dos ciclos, percebeu-se que a inspeção foi capaz de identificar defeitos que poderiam, futuramente, se apresentar como uma falha a partir da utilização do sistema.
 
