--- a/editaveis/informacoes.tex
+++ b/editaveis/informacoes.tex
@@ -3,7 +3,7 @@
 \curso{Engenharia de Software}
 
 % Dados do trabalho
-\titulo{Framework para Avaliação da Qualidade de Código: Uma Abordagem Baseada em Valor}
+\titulo{Framework de Verificação Estática e Dinâmica Código: Uma Abordagem Baseada em Valor}
 \data{2017}
 \palavraChaveUm{Qualidade de Código}
 \palavraChaveDois{Engenharia de Software Baseada em Valor}
@@ -15,6 +15,6 @@
 \cdu{02:141:005.6}
 
 % Dados da aprovação do trabalho
-\dataDaAprovacao{}
+\dataDaAprovacao{28 de junho de 2017}
 \membroConvidadoUm{Profª Msc. Cristiane Soares Ramos}
 \membroConvidadoDois{Prof. Dr. Sérgio Antônio Andrade de Freitas}
