--- a/editaveis/metodologia.tex
+++ b/editaveis/metodologia.tex
@@ -18,21 +18,13 @@ O arcabouço teórico inerente à VBSE e às inspeções de código foi obtido a
 
 Para Fonseca (2002), a pesquisa bibliográfica é realizada a partir do levantamento de referências teóricas já analisadas, e publicadas por meios escritos e eletrônicos. A pesquisa bibliográfica possibilita que o pesquisador conheça o que já se estudou sobre a temática.
 
+Também foi utilizada como fonte para o estabelecimento do \textit{framework} uma revisão sistemática de literatura sobre qualidade de implementação de testes unitários, realizada na disciplina Engenharia de \textit{Software} Experimental do curso de graduação em Engenharia de \textit{Software} da Faculdade UnB Gama (FGA). 
+
 A revisão sistemática, por sua vez, se estabelece como uma metodologia bem definida para identificar, analisar e interpretar as melhores abordagens e práticas relacionadas a uma determinada questão de pesquisa \cite{sistematica}. Além desses aspectos, é uma metodologia que possibilita uma repetição concisa.
 
-A opção pelo procedimento da revisão sistemática deve-se ao fato de que este trabalho também está voltado para a tentativa de compreender quais tem sido as abordagens empregadas na elaboração de testes unitários e como se tem avaliado a efetividade destes. O \textit{framework}, naturalmente, compreende a prática de elaboração de testes unitários.
+A opção pelo uso desta revisão sistemática deve-se ao fato de que este trabalho também está voltado para a tentativa de compreender quais tem sido asf abordagens empregadas na elaboração de testes unitários e como se tem avaliado a efetividade destes. O \textit{framework}, naturalmente, compreende a prática de elaboração de testes unitários.
 
 Outro aspecto interessante da revisão sistemática é que esta auxilia de maneira precisa na localização dos principais trabalhos publicados para uma determinada problemática, favorecendo a construção de uma linha cronológica que demonstra ao pesquisador quais linhas têm sido defendidas e quais são os campos mais promissores para uma futura exploração.
-
-Neste trabalho, para a execução da revisão sistemática, considerou-se a proposta de Kitchenham para a revisão no âmbito da Engenharia de \textit{Software}. A proposta é composta por três fases:
-
-\begin{itemize}
-	\item Planejamento da revisão.
-	\item Condução da revisão.
-	\item Relato da revisão.
-\end{itemize}
-
-A fase de planejamento consiste na identificação da necessidade de se desenvolver uma revisão sistemática, bem como elaborar um protocolo de revisão. Logo em seguida, na fase de condução, os objetivos mais pontuais de pesquisa são identificados e, adicionalmente, estudos são selecionados e seus dados são extraídos e analisados. Por fim, na fase de relato, os dados extraídos e analisados na fase anterior são externalisados e elabora-se uma discussão. Maiores detalhes acerca da revisão sistemática executada neste trabalho podem ser encontrados no Apêndice A.
 
 \section{Detalhamento do Plano Metodológico}
 
@@ -54,7 +46,9 @@ A figura \ref{fig:plano1} ilustra essa parte do plano metodológico.
 \label{fig:plano1}
 \end{figure}
 
-A segunda parte, já vinculada ao TCC 2, envolve outras 3 fases: \textit{Coleta de Dados}; \textit{Análise e Interpretação dos Resultados} e \textit{Divulgação dos Resultados}, conforme ilustrado na Figura 2.
+\clearpage
+
+A segunda parte, já vinculada ao TCC 2, e voltada para a implantação e avaliação da proposta, envolve outras 3 fases: \textit{Coleta de Dados}; \textit{Análise e Interpretação dos Resultados} e \textit{Divulgação dos Resultados}, conforme ilustrado na Figura 2.
 A fase \textit{Coleta de Dados} envolve a aplicação de um procedimento técnico denominado pesquisa-ação. Esse procedimento possibilita que o pesquisador intervenha dentro da problemática, mobilizando os participantes e construindo novos conhecimentos \cite{pesquisa}. Assim, a cada ciclo novos quesitos poderão ser melhor tratados no \textit{framework}.
 
 Na fase \textit{Análise e Interpretação dos Resultados}, todos os dados coletados a partir da utilização do \textit{framework} serão analisados, de forma que todas as percepções possíveis possam ser obtidas. Por fim, na fase \textit{Divulgação dos Resultados}, haverá uma estruturação de todos os dados obtidos e analisados, de forma que possa ser evidenciado a efetividade do uso do \textit{framework}.
@@ -69,17 +63,17 @@ A figura \ref{fig:plano2} ilustra a segunda parte do plano metodológico.
 
 \section{Elaboração da Proposta do \textit{Framework}}
 
-A primeira parte do plano metodológico já foi executada durante a realização do TCC 1. Com base no problema identificado e nas informações levantadas por meio da pesquisa bibliográfica e da revisão sistemática, foi possível conceber o \textit{framework} de avaliação da qualidade de código. Adicionalmente, já foi definido como a avaliação do \textit{framework} seria feita. As próximas seções descrevem detalhadamente este quesito que, por sua vez, constitui a segunda parte do plano metodológico, executado durante este trabalho (TCC 2).
+A primeira parte do plano metodológico foi executada durante a realização do TCC 1. Com base no problema identificado e nas informações levantadas por meio da pesquisa bibliográfica e da revisão sistemática, foi possível conceber o \textit{framework} de verificação estática e dinâmica de código. Adicionalmente, já foi definido como a avaliação do \textit{framework} seria feita. As próximas seções descrevem detalhadamente este quesito que, por sua vez, constitui a segunda parte do plano metodológico, executado durante este trabalho (TCC 2).
 
 \section{Estratégia de Aplicação do \textit{Framework}}
 
-Antes da incorporação das atividades propostas pelo \textit{framework} à rotina das organizações que serão utilizadas como casos, será feita uma reunião com os principais envolvidos de cada projeto. Assim, serão explicitados todos os aspectos do \textit{framework} e a importância dessas atividades para que haja aumento na qualidade do \textit{software}.
+Antes da incorporação das atividades propostas pelo \textit{framework} à rotina das organizações utilizadas como casos, foi feita uma reunião com os principais envolvidos de cada projeto. Assim, foram explicitados todos os aspectos do \textit{framework} e a importância dessas atividades para que haja aumento na qualidade do \textit{software}.
 
-Adicionalmente, será construída uma página na wiki ou até mesmo uma simples página web nos ambientes dos projetos que irá dispor a imagem do processo que constitui o \textit{framework}, bem como o detalhamento deste, de forma que os \textit{stakeholders} dos projetos possam efetuar consultas em caso de dúvidas.
+Adicionalmente, foi construída uma página na wiki dos ambientes dos projetos que dispõe da imagem do processo que constitui o \textit{framework}, bem como o detalhamento deste, de forma que os \textit{stakeholders} dos projetos pudessem efetuar consultas em caso de dúvidas.
 
-Como mencionado em seção anterior, a pesquisa-ação será o procedimento técnico empregado para analisar o uso do \textit{framework}.
+Como mencionado em seção anterior, a pesquisa-ação foi o procedimento técnico empregado para analisar o uso do \textit{framework}.
 
-\section{Organizações onde o \textit{Framework} será aplicado}
+\section{Organizações onde o \textit{Framework} foi aplicado}
 
 \subsection{Controladoria Geral do Distrito Federal}
 
@@ -112,7 +106,7 @@ Para realizar futuramente uma análise da efetividade da aplicação do \textit{
 \centering
 \begin{tabular}{ | m{8cm} | m{8cm} | } 
 \hline
-Analisar & A aplicação do \textit{framework} em projetos de desenvolvimento \\ 
+Analisar & A aplicação do \textit{framework} \\ 
 \hline
 Com o propósito de & Melhorar \\ 
 \hline
@@ -120,34 +114,40 @@ Com respeito a & Efetividade do \textit{framework} \\
 \hline
 Sob o ponto de vista de & \textit{Stakeholders} do projeto \\ 
 \hline
-No contexto de & Aumento da qualidade do \textit{software} \\ 
+No contexto de & Projetos de desenvolvimento e manutenção da Fábrica e da Controladoria \\ 
 \hline
 \end{tabular}
 \label{table:tabela1}
 \end{table}
 
+\hfill \break
+
+\hfill \break
+
 A partir do quadro resumo que descreve o objetivo de medição, foram elaboradas questões a serem respondidas por meio das medições, bem como as métricas associadas às mesmas. A seguir, tem-se a apresentação das questões e métricas.
 
 \begin{itemize}
 	\item \textbf{Questão 1:} Como a quantidade de defeitos do código fonte evolui ao longo \textit{sprints}?
-	\subitem Número de Defeitos
+	\subitem Número de Defeitos encontrados em Inspeções
 
 	\item \textbf{Questão 2:} Qual o nível de eficácia dos testes unitários implementados a partir do uso do guia de implementação do \textit{framework}?
 	\subitem Taxa de acertos por linha de código (Métrica fornecida pelas ferramentas de análise de cobertura)
 
 	\item \textbf{Questão 3:} Qual o número de falhas reportados pelos usuários após homologação da \textit{release} entregue?
-	\subitem Número de Falhas
+	\subitem Número de Falhas em Produção
 
 	\item \textbf{Questão 4:} Qual o grau de satisfação dos desenvolvedores ao utilizarem os guias de inspeção e de implementação de testes unitários propostos pelo \textit{framework}?
-	\subitem Índice de Satisfação
+	\subitem Índice de Satisfação dos Desenvolvedores
 
 	\item \textbf{Questão 5:} Qual o grau de facilidade percebido quando vai ser feita uma manutenção no código?
 	\subitem Índice de Manutenibilidade (Para Java e \textit{CSharp}) e Flog (para \textit{Ruby})
 \end{itemize}
 
-A coleta de métricas será realizada ao final de cada \textit{sprint}, de maneira a avaliar os resultados e verificar a efetividade do \textit{framework}. Caso ajustes sejam necessários, as modificações serão feitas e novamente, todo o ciclo de atividades será executado na \textit{sprint} seguinte.
+As métricas relacionadas às questões 4 e 5 são detalhadas a seguir.
 
-Adicionalmente, para o correto uso do \textit{framework}, propõe-se uma etapa a mais no kanban de implementações da equipe de desenvolvimento, sendo esta a inspeção de código. A funcionalidade só será considerada finalizada, após inspecionada e aprovada por outro integrante da equipe.
+A coleta de métricas foi realizada ao final de cada \textit{sprint}, de maneira a avaliar os resultados e verificar a efetividade do \textit{framework}. Caso ajustes fossem necessários, as modificações eram feitas e novamente, todo o ciclo de atividades era executado na \textit{sprint} seguinte.
+
+Adicionalmente, para o correto uso do \textit{framework}, foi proposta uma etapa a mais no kanban de implementações da equipe de desenvolvimento, sendo esta a inspeção de código. A funcionalidade só seria considerada finalizada, após inspecionada e aprovada por outro integrante da equipe.
 
 \section{Pesquisa de Satisfação dos Desenvolvedores}
 
@@ -165,7 +165,7 @@ Para verificar o nível de satisfação dos desenvolvedores, concebeu-se uma peq
 	\item A manutenibilidade do código ficou melhor após as inspeções de código?
 \end{itemize}
 
-Será feito o cômputo das respostas atribuídas pelos desenvolvedores aos itens da pesquisa de satisfação usando a escala \textit{Likert}: 
+Realizou-se o cômputo das respostas atribuídas pelos desenvolvedores aos itens da pesquisa de satisfação usando a escala \textit{Likert}: 
 
 \begin{itemize}
 	\item {1 - Concordo Totalmente}.
@@ -175,9 +175,11 @@ Será feito o cômputo das respostas atribuídas pelos desenvolvedores aos itens
 	\item {5 - Discordo Totalmente}.
 \end{itemize}
 
-É importante ressaltar que a pesquisa será aplicada ao final de cada \textit{sprint}. Dessa maneira, os desenvolvedores poderão assimilar mais experiências para fornecerem respostas mais concisas ao julgar os itens da pesquisa.
+É importante ressaltar que a pesquisa foi aplicada ao final de cada \textit{sprint}. Dessa maneira, os desenvolvedores puderam assimilar mais experiências para fornecerem respostas mais concisas ao julgar os itens da pesquisa.
 
-\section{Níveis Operacionais das Métricas}
+Por fim, com relação ao índice de satisfação dos desenvolvedores, nenhuma fórmula específica foi desenvolvida. Considerou-se o percentual das alternativas da Escala \textit{Likert} obtido para cada questão do questionário.
+
+\section{Índice de Manutenibilidade e Flog}
 
 Com relação às métricas adotadas por meio da aplicação do GQM, citadas anteriormente, esta seção traz detalhes acerca do Índice de Manutenibilidade.
 
@@ -204,5 +206,3 @@ A métrica Flog expressa uma pontuação que é fornecida ao código com base em
 \end{itemize}
 
 Para cada um dos quesitos citados acima há uma pontuação diferente associada. Por exemplo, uma chamada de método padrão recebe pontuação igual a 2, mas uma chamada \textit{eval} já recebe pontuação igual a 5, mesmo que ambos sejam chamadas. Quanto mais complexo for o entendimento do código, mais alta será a pontuação. Há um site que contem a lista de pontuações categorizada para a métrica disponível em (http://docs.seattlerb.org/flog/). Com relação ao nível de aceitação proposto pelos idealizadores da métrica, um método com boa aceitação possui pontuação total inferior à 40.
-
-Por fim, com relação ao índice de satisfação dos desenvolvedores, nenhuma fórmula específica foi desenvolvida. Será considerado o percentual das alternativas da Escala \textit{Likert} obtido para cada questão do questionário.
