--- a/editaveis/resumo.tex
+++ b/editaveis/resumo.tex
@@ -1,6 +1,6 @@
 \begin{resumo}
  
- A produção de código e a implementação de testes unitários, bem como a realização de inspeções de código, estão instrinsecamente conectados. Testes unitários e inspeções, enquanto práticas complementares da verificação de \textit{software}, foram concebidas com a intenção de aprimorar a identificação de defeitos existentes no código fonte do \textit{software}. Nesse sentido, também é válido notar que a qualidade do código fonte influi na qualidade de uso do \textit{software}, sendo esta contemplada pelo usuário. Mediante este cenário, durante a execução da primeira parte do plano metodológico elaborado neste estudo, concebeu-se um \textit{framework} que reúne um conjunto de atividades e práticas que favorecem a implementação de testes unitários e realização de inspeções correlacionado aos conceitos da Engenharia de \textit{Software} Baseada em Valor, que aborda o alinhamento entre a missão do projeto e as atividades técnicas de desenvolvimento de \textit{software}. Neste trabalho, o objetivo é apresentar a avaliação da efetividade do \textit{framework} concebido na primeira parte deste estudo mediante o uso de um procedimento técnico denominado pesquisa-ação. Foram executados dois ciclos de pesquisa-ação para coletar os dados de execução dos projetos adotados para utilização do \textit{framework}. Espera-se, ao final, que o \textit{framework} de avaliação da qualidade de código esteja comprovadamente adequado para uso em qualquer organização que faça uso de metodologias ágeis.
+ A produção de código e a implementação de testes unitários, bem como a realização de inspeções de código, estão instrinsecamente conectados. Testes unitários e inspeções, enquanto práticas complementares da verificação de \textit{software}, foram concebidas com a intenção de aprimorar a identificação de defeitos existentes no código fonte do \textit{software}. Nesse sentido, também é válido notar que a qualidade do código fonte influi na qualidade de uso do \textit{software}, sendo esta contemplada pelo usuário. Mediante este cenário, durante a execução da primeira parte do plano metodológico elaborado neste estudo, concebeu-se um \textit{framework} que reúne um conjunto de atividades e práticas que favorecem a implementação de testes unitários e realização de inspeções correlacionado aos conceitos da Engenharia de \textit{Software} Baseada em Valor, que aborda o alinhamento entre a missão do projeto e as atividades técnicas de desenvolvimento de \textit{software}. Neste trabalho, o objetivo é apresentar a avaliação da efetividade do \textit{framework} concebido na primeira parte deste estudo mediante o uso de um procedimento técnico denominado pesquisa-ação. Foram executados dois ciclos de pesquisa-ação para coletar os dados de execução dos projetos adotados para utilização do \textit{framework}. Ao final será possível contemplar um \textit{framework} de avaliação da qualidade de código comprovadamente adequado para uso em qualquer organização que faça uso de metodologias ágeis.
 
  \vspace{\onelineskip}
     
