--- a/editaveis/materiaismetodos.tex
+++ b/editaveis/materiaismetodos.tex
@@ -30,7 +30,7 @@ Desde o início da concepção arquitetural da terceira versão do Portal foram 
 
 O Portal passa por constantes evoluções. Todos os dias dados são atualizados e novas funcionalidades são incorporadas em uma periodicidade de 3 semanas, tempo de duração de uma \textit{sprint} no processo de desenvolvimento da COTEC. 
 
-A partir de uma coleta inicial de métricas, o Portal apresentou índice de manutenibilidade médio igual a 55 no código constituinte da camada de \textit{backend}. A cobertura de código era 0\%, devido à inexistência de uma suíte de testes unitários. Adicionalmente, realizando um levantamento dos relatórios de falhas reportadas pela área de negócio acerca das \textit{sprints} passadas, foi possível identificar um número médio de falhas igual a 5. Assim, percebeu-se a importância de utilizar concisamente práticas da verificação de \textit{software} para melhorar a qualidade do Portal.
+A partir de uma coleta inicial de métricas, o Portal apresentou índice de manutenibilidade médio igual a 55 no código constituinte da camada de \textit{backend}. A cobertura de código era 0\%, devido à inexistência de uma suíte de testes unitários. Adicionalmente, realizando um levantamento dos relatórios de falhas reportadas pela área de negócio acerca das \textit{sprints} passadas, foi possível identificar um número médio de falhas igual a 5 a cada implantação em produção. Assim, percebeu-se a importância de utilizar concisamente práticas da verificação de \textit{software} para melhorar a qualidade do Portal.
 
 \subsection{Sistema de Ouvidoria do Distrito Federal}
 
@@ -44,7 +44,7 @@ Assim como no Portal da Transparência, durante a concepção arquitetural da se
 
 O DDD, por sua vez, é uma abordagem que se alinha concisamente às ideias apresentadas pela VBSE, pois basicamente, um dos aspectos mais destacados nesta abordagem é que o código produzido deve estar bem alinhado ao negócio. Este conceito, se utilizado corretamente, favorece a reutilização pois os blocos de construção facilitam o aproveitamento de um mesmo conceito de domínio ou um mesmo código em vários lugares \cite{ddd}. Adicionalmente, com um modelo bem feito e organizado, as diversas partes de um sistema interagem sem que haja muita dependência entre os módulos ou classes de objetos de conceitos distintos, acarretando em um quadro mínimo de acoplamento.
 
-Com relação ao projeto da Ouvidoria, o cenário relativo à implementação de testes unitários era idêntico ao do Portal da Transparência, ou seja, cobertura de código em 0\%. No âmbito do número médio de falhas reportadas pela área de negócio, o projeto da Ouvidoria possuía cerca de 4 falhas reportadas ao final de cada \textit{sprint}. O código, contudo, apresentava um índice de manutenibilidade médio igual a 65.
+Com relação ao projeto da Ouvidoria, o cenário relativo à implementação de testes unitários era idêntico ao do Portal da Transparência, ou seja, cobertura de código em 0\%. No âmbito do número médio de falhas reportadas pela área de negócio, o projeto da Ouvidoria possuía cerca de 4 falhas reportadas ao final de cada \textit{sprint} (falhas reportadas a cada implantação em produção). O código, contudo, apresentava um índice de manutenibilidade médio igual a 65.
 
 Embora tenham sido feitas boas escolhas quanto às tecnologias e arquitetura, o sistema de ouvidoria também necessitava de um controle de qualidade mais rigoroso, visto que assim como o Portal, também passa por constantes evoluções. A figura \ref{fig:inicioOuvdf} exibe a página inicial do Sistema de Ouvidoria do Distrito Federal.
 
@@ -176,7 +176,7 @@ Para coletar a percepção dos desenvolvedores com relação ao uso do \textit{f
 
 \section{Planejamento da Aplicação do \textit{Framework}}
 
-Inicialmente, planejou-se uma período de treinamento nas organizações. Na CGDF, a cultura de implementação de testes unitários e realização de inspeções ainda estava em seu estágio inicial. Portanto, foi preparado um treinamento contemplando modelos de implementação de testes unitários para todas as tecnologias utilizadas no desenvolvimento dos projetos selecionados. Adicionalmente, explicitou-se mais conceitos inerentes às inspeções para que os \textit{checklists} propostos pelo \textit{framework} aplicado neste estudo ficassem mais elucidativos.
+Inicialmente, planejou-se um período de treinamento nas organizações. Na CGDF, a cultura de implementação de testes unitários e realização de inspeções ainda estava em seu estágio inicial. Portanto, foi preparado um treinamento contemplando modelos de implementação de testes unitários para todas as tecnologias utilizadas no desenvolvimento dos projetos selecionados. Adicionalmente, explicitou-se mais conceitos inerentes às inspeções para que os \textit{checklists} propostos pelo \textit{framework} aplicado neste estudo ficassem mais elucidativos.
 
 No Laboratório Fábrica de \textit{Software}, de forma semelhante, também foi promovido um treinamento inicial. Contudo, o foco deste treinamento esteve centralizado na implementação de testes unitários para aplicações \textit{mobile}, uma das principais dificuldades relatadas pela equipe de desenvolvimento do projeto da perícia médica.
 
@@ -219,3 +219,5 @@ Quanto ao projeto da Ouvidoria, foi acordado realização de inspeções e imple
 Por fim, no Laboratório Fábrica de Software, optou-se também por efetuar as inspeções e implementação de testes unitários somente na camada de \textit{backend}.
 
 É válido ressaltar que tanto no projeto da Ouvidoria quanto no projeto da Perícia Médica, foram acordadas inspeções rápidas do código da camada de \textit{frontend} antes da mesclagem nas \textit{branches} oficiais. Porém, seus resultados não foram considerados formalmente para os fins da análise efetuada neste trabalho.
+
+\clearpage
