--- a/editaveis/introducao.tex
+++ b/editaveis/introducao.tex
@@ -81,5 +81,5 @@ Por objetivos específicos para este trabalho, tem-se:
 
 	\item \textbf{Capítulo 5 - Materiais e Métodos}: apresenta uma caracterização detalhada dos projetos adotados para uso do \textit{framework} e descrição de todas as ferramentas de trabalho utilizadas para coleta de informações.
 
-	\item \textbf{Capítulo 6 - Aplicação do \textit{Framework}}: apresenta os resultados obtidos a partir da execução dos ciclos de pesquisa-ação bem como uma análise dos dados coletados.
+	\item \textbf{Capítulo 6 - Resultados da Aplicação do \textit{Framework}}: apresenta os resultados obtidos a partir da execução dos ciclos de pesquisa-ação bem como uma análise dos dados coletados.
 \end{itemize}
