Adicionando ajustes finais no comparativo entre os ciclos

--- a/editaveis/avaliacaoframework.tex
+++ b/editaveis/avaliacaoframework.tex
@@ -729,7 +729,7 @@ Com relação ao índice de manutenibilidade nos projetos Portal, Sistema de Ouv
 
 Quanto ao projeto SICOR, percebeu-se, desde o início, pontuações totais baixas para a métrica Flog, evidenciando um código menos complexo e mais modularizado. Esse aspecto é fundamental para construção de sistemas, visto que possui relação direta com o quesito escalabilidade.
 
-Outro aspecto que deve ser evidenciado é que durante a realização das inspeções foi possível constatar defeitos no código inerentes ao gerenciamento de recursos computacionais, tais como memória e processamento. Verificou-se defeitos dessa magnitude até mesmo no código das suítes de testes unitários. Contudo, em todos os projetos, os defeitos foram corrigidos antes da implantação em ambiente de produção.
+Outro aspecto que deve ser evidenciado é que durante a realização das inspeções foi possível constatar defeitos no código inerentes ao gerenciamento de recursos computacionais, tais como memória e processamento. Verificou-se defeitos dessa magnitude até mesmo no código das suítes de testes unitários. Contudo, em todos os projetos, os defeitos foram corrigidos antes da implantação em ambiente de produção. Adicionalmente, percebeu-se que as suítes de testes unitários elaboradas foram capazes de exercitar mais de uma vez o trecho de código sob teste, tornando a suíte mais eficaz.
 
 O \textit{framework}, de maneira geral, teve uma excelente aceitação e mostrou-se eficiente na verificação da qualidade do código.
 
